# teftar

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  README.md  fly.toml  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.claude/rules/: sentry.md
.github/workflows/: deploy.yml
api/: .dockerignore  .env.example  Cargo.toml  Dockerfile  fly.toml
api/src/: auth.rs  clients.rs  main.rs  middleware.rs
api/src/supabase/: auth.rs  client.rs  mod.rs  realtime.rs  storage.rs
app/: app.css  entry.client.tsx  root.tsx  routes.ts
app/components/: brand-logo.tsx  build-info.tsx
app/components/clients/: add-client-menu.tsx  client-form-dialog.tsx  company-form-dialog.tsx  person-form-dialog.tsx
app/components/layouts/: auth-layout.tsx  dashboard-layout.tsx
app/components/ui/: auth-card.tsx
app/lib/: config.ts  sentry.client.ts
app/lib/stores/: auth.ts
app/lib/types/: client.ts
app/routes/: $.tsx  auth-callback.tsx  clients.tsx  confirm-email.tsx  dashboard.tsx  home.tsx  signin.tsx  signup.tsx
supabase/migrations/: 20260110043421_create_clients_table.sql  20260110045440_create_updated_at_function.sql  20260110051335_alter_clients_split_person_name.sql
